[package]
name = "crossregex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fancy-regex = { version = "0.13", default-features = false }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol.git" }

[profile.release]
lto = true # Enable link-time optimization
strip = true # Strip symbols from binary*
opt-level = 'z' # Optimize for size
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort' # Abort on panic
